src/pages/Shop.css
main.shop {
  width: 100%;
  display: flex;
  flex-direction: column;
  padding: 24px 62px;
}

main.shop section.controls {
  width: 100%;
  padding: 0 0.5rem;
  margin: 0.2rem 0 1rem;
  display: flex;
  justify-content: space-between;
}

main.shop .sort-container {
  display: flex;
  flex-direction: row;
  gap: 8px;
}

main.shop .sort-container .sortorder {
  align-self: center;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  padding: 0;

  background-color: white;
  border: 1px solid black;
  border-radius: 70%;

  transition: transform 120ms ease-in-out;
}

main.shop .sort-container .sortorder.disabled {
  transform: translate(40px, 0);
  opacity: 0;
  pointer-events: none;
}

main.shop .sort-container .sortorder.up {
  transform: rotate(180deg);
}

main.shop .sort-container .sortorder svg {
  width: 2em;
}

main.shop section.products {
  width: 100%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 12px;
}

main.shop .shop-product {
  display: flex;
  flex-direction: column;
  align-items: center;

  margin-top: 4px;

  width: 26rem;
  height: auto;
  font-weight: 600;
  padding: 16px 8px;
  background-color: white;
  border-radius: 8px;
}

main.shop .shop-product img {
  aspect-ratio: 1 / 1;
  max-width: 22rem;
  height: auto;
  object-fit: contain;
}

main.shop .shop-product .product-info {
  margin-top: 28px;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

main.shop .shop-product .product-name {
  max-width: 20rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  /* h3 stuff */
  font-size: 1.125rem;
  margin: 0.5rem 0;
}

main.shop .shop-product .rating {
  position: relative;
  display: flex;
  justify-content: center;
  font-size: 0.75rem;
  padding-left: 4ch;
}

main.shop .shop-product .price {
  background-color: #5eba5e;
  color: white;
  width: fit-content;
  align-self: center;
  padding: 6px;
  border-radius: 8px;
}

main.shop .shop-product .buy-controls {
  width: 80%;
  margin-top: 4px;
  display: flex;
  justify-content: end;
}

main.shop .shop-product .buy-controls button.cart-add {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.25rem;

  padding: 0.5rem;

  background-color: var(--primary);
}

main.shop .shop-product .buy-controls button.cart-add svg {
  display: flex;
  align-items: center;
  width: 1.25rem;
  margin-right: 4px;
}

@media (width < 600px) {
  main.shop .shop-product {
    width: 22rem;
    padding: 16px 8px;
  }
}

